feat: Theme color.
Theme color update from 009933 to 5954ED.

20231004

--- a/frontend/src/static/css/config/index.scss
+++ b/frontend/src/static/css/config/index.scss
@@ -4,10 +4,10 @@
 body {
   --default-logo-height: 18px;
 
-  --default-theme-color: #009933;
-  --default-brand-color: #009933;
+  --default-theme-color: #5954ED;
+  --default-brand-color: #5954ED;
 
-  --success-color: #00a28b;
+  --success-color: #4d56f3;
   --warning-color: #e09f1f;
   --danger-color: #de623b;
 
