--- a/templates/config/installation/site.html
+++ b/templates/config/installation/site.html
@@ -12,11 +12,11 @@ MediaCMS.site = {
     logo:{
     	lightMode:{
             img: "/static/images/logo_dark.png",
-            svg: "/static/images/logo_dark.svg",
+            svg: "/static/images/logo_dark.png",
     	},
     	darkMode:{
             img: "/static/images/logo_light.png",
-            svg: "/static/images/logo_light.svg",
+            svg: "/static/images/logo_light.png",
     	},
     },
     pages: {
