--- a/frontend/config/templates/static/aboutPage.html
+++ b/frontend/config/templates/static/aboutPage.html
@@ -7,7 +7,7 @@
         <h2>About</h2>
         <hr />
         <p>
-          <a href="https://mediacms.io">MediaCMS</a> is a modern, fully featured open source video and media CMS. It is
+          <a href="https://streampod.io">StreamPod VMS</a> is a modern, fully featured open source video CMS. It is
           developed to meet the needs of modern web platforms for viewing and sharing media.
         </p>
       </div>
