--- a/templates/cms/index.html
+++ b/templates/cms/index.html
@@ -42,6 +42,16 @@
     }]
 }
 </script>
+<!-- ADDED to Prevent Flicker -->
+<style type="text/css">
+	body.light-mode {
+		background-color: #F9FAFC;
+	}
+	body.dark-mode {
+		background-color: #1A1A1A;
+	}
+</style>
+<!-- ADDED to Prevent Flicker -->
 
 {% endblock headermeta %}
 
