--- a/templates/root.html
+++ b/templates/root.html
@@ -24,7 +24,16 @@
         {% include "config/index.html" %}
         
     {% endblock head %}
-
+<!-- ADDED to Prevent Flicker -->
+    <style type="text/css">
+        body.light-mode {
+            background-color: #F9FAFC;
+        }
+        body.dark-mode {
+            background-color: #1A1A1A;
+        }
+    </style>
+<!-- ADDED to Prevent Flicker -->
 </head>
 
 <body>
