--- a/frontend/config/templates/static/aboutPage.html
+++ b/frontend/config/templates/static/aboutPage.html
@@ -7,8 +7,7 @@
         <h2>About</h2>
         <hr />
         <p>
-          <a href="https://streampod.io">StreamPod VMS</a> is a modern, fully featured open source video CMS. It is
-          developed to meet the needs of modern web platforms for viewing and sharing media.
+          <a href="https://streampod.io">StreamPod</a>is a modern open core video management system.
         </p>
       </div>
     </div>
