--- a/templates/cms/about.html
+++ b/templates/cms/about.html
@@ -42,6 +42,6 @@
 	<h2>About</h2>
 	<hr/>
 	
-    <p><a href="https://mediacms.io">StreamPod VMS</a> is a modern, fully featured open source video CMS. It is developed to meet the needs of modern web platforms for viewing and sharing media.</p>
+    <p><a href="https://streampod.io">StreamPod </a>is a modern open core video management system.</p>
 </div>
 {% endblock %}
