updated tos pages

--- a/frontend/config/templates/static/termsPage.html
+++ b/frontend/config/templates/static/termsPage.html
@@ -15,48 +15,54 @@
         <h2>2. User Accounts</h2>
         <p>To access certain features of StreamPod, you may be required to create an account. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account.</p>
         
-        <h2>3. User Content</h2>
-        <p>StreamPod allows you to create and deploy Deployments. By uploading or creating content on StreamPod, you grant us a non-exclusive, transferable, sub-licensable, royalty-free, worldwide license to use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and display such content in connection with StreamPod and our services.</p>
+        <h2>3. User Generated Content</h2>
+        <p>>StreamPod provides a platform for users to create and deploy Deployments. When users upload or create content on StreamPod, the user and/or organization retains ownership of the intellectual property rights to that content. However, by submitting content to the platform, users grant StreamPod a limited, non-exclusive, royalty-free license to use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and display such content solely for the purpose of operating and providing the StreamPod service. StreamPod does not claim ownership of user-generated content and will not be held liable for any violations of intellectual property rights or illegal content submitted by users.</p>
         
-        <h2>4. Intellectual Property</h2>
+        <h2>4. Open Source Components</h2>
+        <p>StreamPod incorporates open source software components, which are subject to their respective open source licenses. Users are permitted to use, modify, and distribute these open source components in accordance with the terms and conditions of their respective licenses.</p>
+        
+        <h2>5. Intellectual Property</h2>
         <p>StreamPod and its original content, features, and functionality are owned by Blowleaf Inc. and are protected by intellectual property laws. You may not modify, copy, distribute, transmit, display, reproduce, publish, license, create derivative works from, transfer, or sell any information or services obtained from StreamPod.</p>
         
-        <h2>5. Trademarks</h2>
+        <h2>6. Respecting Intellectual Property Rights</h2>
+        <p>StreamPod respects the intellectual property rights of others and complies with the requirements set forth in the Digital Millennium Copyright Act ("DMCA") and other applicable intellectual property laws. If you believe that any content posted on the StreamPod platform infringes upon your copyrights or other intellectual property rights, please submit a notice following our Intellectual Property Infringement Guidelines. These guidelines provide detailed information about our policies, the required elements for your notice, and the designated channels for submitting such notices. StreamPod takes intellectual property rights seriously and will promptly investigate and respond to any legitimate claims of infringement in accordance with applicable laws and regulations. We encourage our users to respect the intellectual property rights of others and to use the platform in a responsible and lawful manner.</p>
+        
+        <h2>7. Trademarks</h2>
         <p>The StreamPod name, logo, and any other trademarks, service marks, and trade names displayed on the Platform (collectively, the "Marks") are the property of Blowleaf Inc. or their respective owners. You may not use, copy, reproduce, distribute, modify, or display any of the Marks without the prior written permission of Blowleaf Inc. or the respective owner. All rights in the Marks are reserved.</p>
         
-        <h2>6. Jurisdictions and Compliance</h2>
+        <h2>9. Jurisdictions and Compliance</h2>
         <p>StreamPod may be hosted and operate in multiple jurisdictions. You are solely responsible for ensuring that your use of StreamPod and any Deployments comply with all applicable laws, rules, and regulations in the jurisdictions where StreamPod or Deployments are accessed or used.</p>
         
-        <h2>7. Prohibited Activities</h2>
+        <h2>9. Prohibited Activities</h2>
         <p>You may not use StreamPod or any Deployments for any illegal or unauthorized purposes. This includes, but is not limited to, uploading or distributing content that infringes on intellectual property rights, violates privacy rights, or contains hate speech, obscenity, or explicit violence.</p>
         
-        <h2>8. Third-Party Services</h2>
+        <h2>10. Third-Party Services</h2>
         <p>StreamPod may integrate or interact with third-party services, websites, or applications. We are not responsible for the content, privacy policies, or practices of any third-party services, and your use of such services is at your own risk.</p>
         
-        <h2>9. Termination</h2>
+        <h2>11. Termination</h2>
         <p>We reserve the right to suspend or terminate your access to StreamPod or any Deployments at any time, without notice, and for any reason, including but not limited to a violation of these Terms.</p>
         
-        <h2>10. Disclaimer of Warranties</h2>
+        <h2>12. Disclaimer of Warranties</h2>
         <p>StreamPod and any Deployments are provided "as is" without warranties of any kind, either express or implied, including but not limited to warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>
         
-        <h2>11. Limitation of Liability</h2>
+        <h2>13. Limitation of Liability</h2>
         <p>In no event shall Blowleaf Inc. or its affiliates be liable for any indirect, incidental, special, or consequential damages arising out of or in connection with the use of StreamPod or any Deployments, even if advised of the possibility of such damages.</p>
         
-        <h2>12. Indemnification</h2>
+        <h2>14. Indemnification</h2>
         <p>You agree to indemnify, defend, and hold harmless Blowleaf Inc., its affiliates, and their respective officers, directors, employees, agents, and representatives from and against any and all claims, damages, losses, liabilities, costs, and expenses (including reasonable attorneys' fees) arising out of or in connection with your use of StreamPod or any Deployments, or your violation of these Terms.</p>
         
-        <h2>13. Governing Law and Jurisdiction</h2>
+        <h2>15. Governing Law and Jurisdiction</h2>
         <p>These Terms shall be governed by and construed in accordance with the laws of [Governing Jurisdiction]. Any legal action or proceeding arising out of or relating to these Terms shall be brought exclusively in the courts located in [Jurisdiction], and you consent to the personal jurisdiction of such courts.</p>
         
-        <h2>14. Changes to the Terms</h2>
+        <h2>16. Changes to the Terms</h2>
         <p>We reserve the right to modify or update these Terms at any time. Your continued use of StreamPod after any changes constitutes your acceptance of the revised Terms.</p>
         
-        <h2>15. Entire Agreement</h2>
+        <h2>17. Entire Agreement</h2>
         <p>These Terms, along with our Privacy Policy, constitute the entire agreement between you and Blowleaf Inc. regarding your use of StreamPod and any Deployments, and supersede all prior or contemporaneous communications and proposals, whether oral or written.</p>
         
-        <p>If you have any questions or concerns about these Terms, please contact us at [Contact Information].</p>
+        <p>If you have any questions or concerns about these Terms, please contact us at contact@streampod.com</p>
         
-        <p>Last updated: [Date]</p>
+        <p>Last updated: 3/28/24</p>
       </div>
     </div>
     <div class="page-sidebar-content-overlay"></div>
