--- a/frontend/config/templates/static/termsPage.html
+++ b/frontend/config/templates/static/termsPage.html
@@ -6,7 +6,7 @@
       <div class="custom-page-wrapper">
         <h2>Terms</h2>
         <hr />
-        <p>Terms of service</p>
+        <h2>Terms of service</h2>
         <p>By accessing or using StreamPod, you agree to be bound by these Terms of Service ("Terms") and our Privacy Policy, which is incorporated by reference. If you do not agree to these Terms, please do not use StreamPod.</p>
 
         <h2>1. Eligibility</h2>
@@ -30,7 +30,7 @@
         <h2>7. Trademarks</h2>
         <p>The StreamPod name, logo, and any other trademarks, service marks, and trade names displayed on the Platform (collectively, the "Marks") are the property of Blowleaf Inc. or their respective owners. You may not use, copy, reproduce, distribute, modify, or display any of the Marks without the prior written permission of Blowleaf Inc. or the respective owner. All rights in the Marks are reserved.</p>
         
-        <h2>9. Jurisdictions and Compliance</h2>
+        <h2>8. Jurisdictions and Compliance</h2>
         <p>StreamPod may be hosted and operate in multiple jurisdictions. You are solely responsible for ensuring that your use of StreamPod and any Deployments comply with all applicable laws, rules, and regulations in the jurisdictions where StreamPod or Deployments are accessed or used.</p>
         
         <h2>9. Prohibited Activities</h2>
