--- a/templates/cms/tos.html
+++ b/templates/cms/tos.html
@@ -41,7 +41,7 @@
 <div class="custom-page-wrapper">
 	<h2>Terms</h2>
 	<hr/>
-    <p>Terms of service</p>
+    <h2>Terms of service</h2>
     <p>By accessing or using StreamPod, you agree to be bound by these Terms of Service ("Terms") and our Privacy Policy, which is incorporated by reference. If you do not agree to these Terms, please do not use StreamPod.</p>
 
     <h2>1. Eligibility</h2>
@@ -53,7 +53,7 @@
     <h2>3. User Generated Content</h2>
     <p>>StreamPod provides a platform for users to create and deploy Deployments. When users upload or create content on StreamPod, the user and/or organization retains ownership of the intellectual property rights to that content. However, by submitting content to the platform, users grant StreamPod a limited, non-exclusive, royalty-free license to use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and display such content solely for the purpose of operating and providing the StreamPod service. StreamPod does not claim ownership of user-generated content and will not be held liable for any violations of intellectual property rights or illegal content submitted by users.</p>
     
-    <p>>4. Open Source Components</h2>
+    <p>4. Open Source Components</h2>
     <p>StreamPod incorporates open source software components, which are subject to their respective open source licenses. Users are permitted to use, modify, and distribute these open source components in accordance with the terms and conditions of their respective licenses.</p>
     
     <h2>5. Intellectual Property</h2>
@@ -65,7 +65,7 @@
     <h2>7. Trademarks</h2>
     <p>The StreamPod name, logo, and any other trademarks, service marks, and trade names displayed on the Platform (collectively, the "Marks") are the property of Blowleaf Inc. or their respective owners. You may not use, copy, reproduce, distribute, modify, or display any of the Marks without the prior written permission of Blowleaf Inc. or the respective owner. All rights in the Marks are reserved.</p>
     
-    <h2>9. Jurisdictions and Compliance</h2>
+    <h2>8. Jurisdictions and Compliance</h2>
     <p>StreamPod may be hosted and operate in multiple jurisdictions. You are solely responsible for ensuring that your use of StreamPod and any Deployments comply with all applicable laws, rules, and regulations in the jurisdictions where StreamPod or Deployments are accessed or used.</p>
     
     <h2>9. Prohibited Activities</h2>
